force-app/main/default/objects/Transac_Notification_History__c/Transac_Notification_History__c.object-meta.xml
<CustomObject>
    <label>Transac Notification History</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transac Notifications History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>