force-app/main/default/objects/Transac_Notification_History__c/fields/MK_Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>MK_Message_Subject__c</fullName>
    <label>Message Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>