force-app/main/default/objects/Transac_Notification_History__c/fields/MK_Personnalized__c.field-meta.xml
<CustomField>
    <fullName>MK_Personnalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personnalized</label>
    <type>Checkbox</type>
</CustomField>