force-app/main/default/objects/Transac_Notification_History__c/fields/MK_Product_recommanded_3__c.field-meta.xml
<CustomField>
    <fullName>MK_Product_recommanded_3__c</fullName>
    <label>Product recommanded 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>