force-app/main/default/objects/Transac_Notification_History__c/fields/MK_Product_recommanded_5_Strategy__c.field-meta.xml
<CustomField>
    <fullName>MK_Product_recommanded_5_Strategy__c</fullName>
    <label>Product recommanded 5 Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>