force-app/main/default/objects/Transac_Notification_History__c/fields/MK_Source__c.field-meta.xml
<CustomField>
    <fullName>MK_Source__c</fullName>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>