force-app/main/default/objects/Transac_Notification_History__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transac_Notification_History</relationshipName>
    <type>Lookup</type>
</CustomField>